
  * Fix build with ghc 8.4, which broke due to the Semigroup Monoid change.
  * Dropped support for building propellor with ghc 7 (as in debian
    oldstable), to avoid needing to depend on the semigroups transitional
    package, but also because it's just too old to be worth supporting.
  * stack.yaml: Updated to lts-9.21.
  * Make Schroot.overlaysInTmpfs revertable
    Thanks, Sean Whitton

 -- Joey Hess <id@joeyh.name>  Mon, 23 Apr 2018 13:12:25 -0400

propellor (5.3.5) unstable; urgency=medium

  * Apt.stdSourcesList now adds stable-updates suite
    Thanks, Sean Whitton
  * Significantly increased propellor build speed when your config.hs
    is in a fork of the propellor repository, by avoiding redundant builds
    of propellor library.

 -- Joey Hess <id@joeyh.name>  Sun, 22 Apr 2018 12:27:45 -0400

propellor (5.3.4) unstable; urgency=medium

  * Apt.trustsKey: Use apt-key to add key rather than manually driving gpg,
    which seems to not work anymore.
    Thanks, Russell Sim.
  * Firewall: Reorder iptables parameters that are order
    dependant to make --to-dest and --to-source work.
    Thanks, Russell Sim

 -- Joey Hess <id@joeyh.name>  Wed, 21 Mar 2018 14:59:15 -0400

propellor (5.3.3) unstable; urgency=medium

  * Warn again about new upstream version when ~/.propellor was cloned from the
    Debian git bundle using an older version of propellor that set up an
    upstream remote.
  * Avoid crashing if initial fetch from origin fails when spinning a host.
  * Added Propllor.Property.Openssl module contributed by Félix Sipma.

 -- Joey Hess <id@joeyh.name>  Mon, 26 Feb 2018 14:34:37 -0400

propellor (5.3.2) unstable; urgency=medium

  * Added Propellor.Property.Atomic, which can make a non-atomic property
    that operates on a directory into an atomic property.
    (Inspired by Vaibhav Sagar's talk on Functional Devops in a
    Dysfunctional World at LCA 2018.)
  * Added Git.pulled.
  * Systemd.machined: Install systemd-container on Debian